test/trivial/deitz/vars-scopes/underscore_name.good
underscore_name.chpl:1: syntax error: near '_'
underscore_name.chpl:3: syntax error: near '_'
