test/trivial/deitz/vars-scopes/underscore_name.chpl
var _ = 2;

writeln(_);
